[gd_scene load_steps=23 format=3 uid="uid://bqn8v6gbnfj1u"]

[ext_resource type="Script" path="res://scripts/menus/connectScreen.gd" id="1_ep8hg"]
[ext_resource type="Shader" uid="uid://dsj7wr5hf50yw" path="res://vfx/shaders/scroll_simple.tres" id="2_mssil"]
[ext_resource type="Texture2D" uid="uid://brgcnnmsawhxw" path="res://art/ui/background.png" id="3_kglrb"]
[ext_resource type="FontFile" uid="uid://dhk11k42eybnt" path="res://fonts/chela-one.regular.ttf" id="4_nlh17"]
[ext_resource type="Texture2D" uid="uid://b5k4twe1vvha5" path="res://art/character ph/bunny ph.png" id="5_faemh"]
[ext_resource type="Texture2D" uid="uid://soudc4snc7fj" path="res://art/character ph/kibby ph 2.png" id="6_sn75l"]
[ext_resource type="Texture2D" uid="uid://bdyllnybosvnm" path="res://art/character ph/poss ph.png" id="7_h07s7"]
[ext_resource type="Texture2D" uid="uid://dx7xpikedu613" path="res://art/character ph/lizer ph.png" id="8_7jkg3"]
[ext_resource type="Texture2D" uid="uid://684pxvrx2k8n" path="res://art/character ph/shadowdemon_body.png" id="9_75m87"]
[ext_resource type="Texture2D" uid="uid://dsm2816pum58t" path="res://art/character ph/bombrun1.png" id="10_itjb4"]
[ext_resource type="Texture2D" uid="uid://cqrh7ndjucvg5" path="res://art/character ph/effigy ph.png" id="11_v2v6k"]
[ext_resource type="Texture2D" uid="uid://veo5l360amx3" path="res://art/character ph/player ph.png" id="12_m4gtj"]
[ext_resource type="Texture2D" uid="uid://6i8qff0kq7ei" path="res://art/character ph/enemy ph.png" id="13_oj0rj"]
[ext_resource type="AudioStream" uid="uid://o46j6vbj5ncu" path="res://sound/music/aeiou.ogg" id="14_5jyka"]
[ext_resource type="Texture2D" uid="uid://by4l1bqxb0vue" path="res://art/character ph/ndvr sprites/loser.png" id="14_u8vuc"]
[ext_resource type="Texture2D" uid="uid://cxqphh1ypvm5u" path="res://art/character ph/ndvr sprites/GATOR.png" id="15_mlfi1"]
[ext_resource type="Texture2D" uid="uid://bte5l2cpqvgmu" path="res://art/character ph/ndvr sprites/bnuy.png" id="16_0xpqv"]
[ext_resource type="Texture2D" uid="uid://bbk43vaxuk3i0" path="res://art/character ph/ndvr sprites/demomouse.png" id="17_5o8er"]
[ext_resource type="Texture2D" uid="uid://bsh65awgwn84i" path="res://art/character ph/ndvr sprites/stone.png" id="18_vmj0f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0gu1n"]
shader = ExtResource("2_mssil")
shader_parameter/direction = Vector2(0.05, 0)
shader_parameter/Texture2DParameter = ExtResource("3_kglrb")

[sub_resource type="LabelSettings" id="LabelSettings_yj1jt"]
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1pvem"]
font = ExtResource("4_nlh17")
font_size = 56
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="ConnectScreen" type="Control" node_paths=PackedStringArray("nameBox", "addressBox", "portBox", "errorMsg", "charBodySel")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ep8hg")
nameBox = NodePath("Control/VBoxContainer/HBoxContainer3/LineEdit")
addressBox = NodePath("Control/VBoxContainer/HBoxContainer/LineEdit")
portBox = NodePath("Control/VBoxContainer/HBoxContainer2/LineEdit")
errorMsg = NodePath("Control/VBoxContainer/Label2")
charBodySel = NodePath("Panel2/ItemList")

[node name="scrollbg" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_0gu1n")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Panel" parent="."]
custom_minimum_size = Vector2(500, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -442.0
offset_top = -187.0
offset_right = 124.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -168.0
offset_right = 169.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("4_nlh17")
theme_override_font_sizes/font_size = 50
text = "join a server, fool

"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_nlh17")
theme_override_font_sizes/font_size = 30
text = "Username : "

[node name="LineEdit" type="LineEdit" parent="Control/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_nlh17")
theme_override_font_sizes/font_size = 25
text = "Player"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_nlh17")
theme_override_font_sizes/font_size = 30
text = "Hostname : "

[node name="LineEdit" type="LineEdit" parent="Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_nlh17")
theme_override_font_sizes/font_size = 25
text = "localhost"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_nlh17")
theme_override_font_sizes/font_size = 25
text = "Port : "

[node name="LineEdit" type="LineEdit" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_nlh17")
theme_override_font_sizes/font_size = 25
text = "24500"

[node name="CenterContainer" type="CenterContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Control/VBoxContainer/CenterContainer/HBoxContainer4"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_nlh17")
theme_override_font_sizes/font_size = 40
text = "Join"

[node name="Button2" type="Button" parent="Control/VBoxContainer/CenterContainer/HBoxContainer4"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_nlh17")
theme_override_font_sizes/font_size = 40
text = "Create"

[node name="Label2" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "
"
label_settings = SubResource("LabelSettings_yj1jt")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 147.0
offset_top = -237.0
offset_right = 397.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 19.0
offset_top = 11.0
offset_right = 234.0
offset_bottom = 43.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_nlh17")
theme_override_font_sizes/font_size = 26
text = "choose ur character  :3"
horizontal_alignment = 1

[node name="ItemList" type="ItemList" parent="Panel2"]
custom_minimum_size = Vector2(3.195, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -174.0
offset_right = 128.0
offset_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2
item_count = 19
fixed_icon_size = Vector2i(50, 50)
item_0/text = "Fully playable characters"
item_0/selectable = false
item_1/text = "Bnuy"
item_1/icon = ExtResource("5_faemh")
item_2/text = "kibby"
item_2/icon = ExtResource("6_sn75l")
item_3/text = "Incomplete characters"
item_3/selectable = false
item_4/text = "Possum"
item_4/icon = ExtResource("7_h07s7")
item_5/text = "Lizer"
item_5/icon = ExtResource("8_7jkg3")
item_6/text = "Enemies"
item_6/selectable = false
item_7/text = "enemy"
item_7/icon = ExtResource("9_75m87")
item_8/text = "runner_enemy"
item_8/icon = ExtResource("10_itjb4")
item_9/text = "Technical"
item_9/selectable = false
item_10/text = "test_effigy"
item_10/icon = ExtResource("11_v2v6k")
item_11/text = "Scrap"
item_11/selectable = false
item_12/text = "player"
item_12/icon = ExtResource("12_m4gtj")
item_12/disabled = true
item_13/text = "enemy_o"
item_13/icon = ExtResource("13_oj0rj")
item_13/disabled = true
item_14/text = "LOSER"
item_14/icon = ExtResource("14_u8vuc")
item_15/text = "gator"
item_15/icon = ExtResource("15_mlfi1")
item_16/text = "bunny"
item_16/icon = ExtResource("16_0xpqv")
item_17/text = "demomouse"
item_17/icon = ExtResource("17_5o8er")
item_18/text = "Stone"
item_18/icon = ExtResource("18_vmj0f")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_5jyka")
volume_db = -12.0
pitch_scale = 0.9
autoplay = true
bus = &"music"

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_left = 19.0
offset_top = 7.0
offset_right = 617.0
offset_bottom = 74.0
text = "Let's call this a \"debug menu\""
label_settings = SubResource("LabelSettings_1pvem")

[node name="close" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 63.0
offset_top = -100.0
offset_right = 178.0
offset_bottom = -57.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_nlh17")
theme_override_font_sizes/font_size = 29
text = "Back to Title"

[connection signal="pressed" from="Control/VBoxContainer/CenterContainer/HBoxContainer4/Button" to="." method="onJoinClicked"]
[connection signal="pressed" from="Control/VBoxContainer/CenterContainer/HBoxContainer4/Button2" to="." method="onCreateClicked"]
[connection signal="ready" from="Panel2/ItemList" to="Panel2/ItemList" method="grab_focus"]
[connection signal="ready" from="Panel2/ItemList" to="Panel2/ItemList" method="select" binds= [1]]
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
